--- a/notebooks/aula-02/aula-02.ipynb
+++ b/notebooks/aula-02/aula-02.ipynb
@@ -144,16 +144,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def saudacao(nome):\n",
+    "    print(\"Seja bem vindo\", nome)\n",
+    "\n",
+    "saudacao(input(\"Digite seu nome.\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "b) Implemente um módulo contendo uma função que verifique se um número é primo.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 é primo.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import check_number\n",
+    "\n",
+    "check_number.prime_number(2);"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "src-6haUfNBS-py3.8",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.17"
   },
   "orig_nbformat": 4
  },
