Notebook aula-03 adicionado.

--- a/notebooks/aula-02/aula-02.ipynb
+++ b/notebooks/aula-02/aula-02.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Revisão de Python\n",
     "## Váriaveis e Operadores:\n",
     "\n",
     "a) Crie um programa que leia dois números inteiros e imprima a soma, subtração, multiplicação e divisão entre eles."
@@ -164,17 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 é primo.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import check_number\n",
     "\n",
