Dicionario de pinguins adicionado

--- a/notebooks/aula-03/aula-03.ipynb
+++ b/notebooks/aula-03/aula-03.ipynb
@@ -27,29 +27,234 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "### Códigos"
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importar o seaborn para carregar os datasets:"
+    "## Importandos as bibliotecas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset penguins\n",
+    "### Carregando DataSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "species               object\n",
+       "island                object\n",
+       "bill_length_mm       float64\n",
+       "bill_depth_mm        float64\n",
+       "flipper_length_mm    float64\n",
+       "body_mass_g          float64\n",
+       "sex                   object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_pg = sns.load_dataset('penguins')\n",
+    "\n",
+    "\n",
+    "\n",
+    "df_tp = sns.load_dataset('tips')\n",
+    "df_tt = sns.load_dataset('titanic')\n",
+    "df_ac = sns.load_dataset('anscombe')\n",
+    "\n",
+    "df_pg.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dicionário de dados"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>variavel</th>\n",
+       "      <th>descricao</th>\n",
+       "      <th>tipo</th>\n",
+       "      <th>subtipo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>species</td>\n",
+       "      <td>Espécie do pinguim ('Adelie', 'Gentoo', 'Chins...</td>\n",
+       "      <td>Qualitativa</td>\n",
+       "      <td>Nominal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>island</td>\n",
+       "      <td>Ilha em que o dado do pinguim foi coletado ('B...</td>\n",
+       "      <td>Qualitativa</td>\n",
+       "      <td>Nominal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>bill_length_mm</td>\n",
+       "      <td>Comprimento do bico do pinguim em milímetros</td>\n",
+       "      <td>Quantitativa</td>\n",
+       "      <td>Contínua</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>bill_depth_mm</td>\n",
+       "      <td>Profundidade do bico do pinguim em milímetros</td>\n",
+       "      <td>Quantitativa</td>\n",
+       "      <td>Contínua</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>flipper_length_mm</td>\n",
+       "      <td>Comprimento da nadadeira do pinguim em milímetros</td>\n",
+       "      <td>Quantitativa</td>\n",
+       "      <td>Contínua</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>body_mass_g</td>\n",
+       "      <td>Massa corporal do pinguim em gramas</td>\n",
+       "      <td>Quantitativa</td>\n",
+       "      <td>Contínua</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>sex</td>\n",
+       "      <td>Sexo do pinguim em gramas</td>\n",
+       "      <td>Qualitativa</td>\n",
+       "      <td>Nominal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            variavel                                          descricao  \\\n",
+       "0            species  Espécie do pinguim ('Adelie', 'Gentoo', 'Chins...   \n",
+       "1             island  Ilha em que o dado do pinguim foi coletado ('B...   \n",
+       "2     bill_length_mm       Comprimento do bico do pinguim em milímetros   \n",
+       "3      bill_depth_mm      Profundidade do bico do pinguim em milímetros   \n",
+       "4  flipper_length_mm  Comprimento da nadadeira do pinguim em milímetros   \n",
+       "5        body_mass_g                Massa corporal do pinguim em gramas   \n",
+       "6                sex                          Sexo do pinguim em gramas   \n",
+       "\n",
+       "           tipo   subtipo  \n",
+       "0   Qualitativa   Nominal  \n",
+       "1   Qualitativa   Nominal  \n",
+       "2  Quantitativa  Contínua  \n",
+       "3  Quantitativa  Contínua  \n",
+       "4  Quantitativa  Contínua  \n",
+       "5  Quantitativa  Contínua  \n",
+       "6   Qualitativa   Nominal  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import seaborn as sns\n",
+    "df_pg_dict = pd.DataFrame([\n",
+    "    {\n",
+    "        \"variavel\": \"species\",\n",
+    "        \"descricao\": \"Espécie do pinguim ('Adelie', 'Gentoo', 'Chinstrap')\",\n",
+    "        \"tipo\": \"Qualitativa\",\n",
+    "        \"subtipo\": \"Nominal\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"variavel\": \"island\",\n",
+    "        \"descricao\": \"Ilha em que o dado do pinguim foi coletado ('Biscue', 'Dream', 'Torgersen')\",\n",
+    "        \"tipo\": \"Qualitativa\",\n",
+    "        \"subtipo\": \"Nominal\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"variavel\": \"bill_length_mm\",\n",
+    "        \"descricao\": \"Comprimento do bico do pinguim em milímetros\",\n",
+    "        \"tipo\": \"Quantitativa\",\n",
+    "        \"subtipo\": \"Contínua\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"variavel\": \"bill_depth_mm\",\n",
+    "        \"descricao\": \"Profundidade do bico do pinguim em milímetros\",\n",
+    "        \"tipo\": \"Quantitativa\",\n",
+    "        \"subtipo\": \"Contínua\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"variavel\": \"flipper_length_mm\",\n",
+    "        \"descricao\": \"Comprimento da nadadeira do pinguim em milímetros\",\n",
+    "        \"tipo\": \"Quantitativa\",\n",
+    "        \"subtipo\": \"Contínua\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"variavel\": \"body_mass_g\",\n",
+    "        \"descricao\": \"Massa corporal do pinguim em gramas\",\n",
+    "        \"tipo\": \"Quantitativa\",\n",
+    "        \"subtipo\": \"Contínua\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"variavel\": \"sex\",\n",
+    "        \"descricao\": \"Sexo do pinguim em gramas\",\n",
+    "        \"tipo\": \"Qualitativa\",\n",
+    "        \"subtipo\": \"Nominal\"\n",
+    "    },\n",
+    "])\n",
     "\n",
-    "df_pg = sns.load_dataset('penguins')\n",
-    "df_tp = sns.load_dataset('tips')\n",
-    "df_tt = sns.load_dataset('titanic')\n",
-    "df_ac = sns.load_dataset('anscombe')"
+    "df_pg_dict"
    ]
   }
  ],
@@ -69,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
