--- a/notebooks/aula-03/aula-03.ipynb
+++ b/notebooks/aula-03/aula-03.ipynb
@@ -27,37 +27,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Importandos as bibliotecas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "import pandas as pd"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset penguins\n",
+    "## Dataset penguins"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Carregando DataSet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,11 +81,9 @@
    "source": [
     "df_pg = sns.load_dataset('penguins')\n",
     "\n",
-    "\n",
-    "\n",
-    "df_tp = sns.load_dataset('tips')\n",
-    "df_tt = sns.load_dataset('titanic')\n",
-    "df_ac = sns.load_dataset('anscombe')\n",
+    "# df_tp = sns.load_dataset('tips')\n",
+    "# df_tt = sns.load_dataset('titanic')\n",
+    "# df_ac = sns.load_dataset('anscombe')\n",
     "\n",
     "df_pg.dtypes"
    ]
@@ -99,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +201,7 @@
        "6   Qualitativa   Nominal  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,6 +253,159 @@
     "])\n",
     "\n",
     "df_pg_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset tips"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Carregando DataSet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculando estatísticas de tendência central e disperção"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def statistics(data_frame, data_frame_dict):\n",
+    "    quantitative_vars = data_frame_dict.query(\"tipo == 'Quantitativa'\")\n",
+    "    quantitative_vars['variavel']\n",
+    "    statistics_columns = np.array(['mean', 'median', 'mode', 'std', 'var'])\n",
+    "\n",
+    "    statistics_data = np.column_stack([\n",
+    "            data_frame[quantitative_vars['variavel']].mean(),\n",
+    "            data_frame[quantitative_vars['variavel']].median(),\n",
+    "            data_frame[quantitative_vars['variavel']].mode().T,\n",
+    "            data_frame[quantitative_vars['variavel']].std(),\n",
+    "            data_frame[quantitative_vars['variavel']].var()\n",
+    "        ])\n",
+    "\n",
+    "    statistics_list = pd.DataFrame(statistics_data, index=quantitative_vars['variavel'], columns=statistics_columns)\n",
+    "    display(statistics_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>std</th>\n",
+       "      <th>var</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>variavel</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <td>43.921930</td>\n",
+       "      <td>44.45</td>\n",
+       "      <td>41.1</td>\n",
+       "      <td>5.459584</td>\n",
+       "      <td>29.807054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <td>17.151170</td>\n",
+       "      <td>17.30</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>1.974793</td>\n",
+       "      <td>3.899808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <td>200.915205</td>\n",
+       "      <td>197.00</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>14.061714</td>\n",
+       "      <td>197.731792</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <td>4201.754386</td>\n",
+       "      <td>4050.00</td>\n",
+       "      <td>3800.0</td>\n",
+       "      <td>801.954536</td>\n",
+       "      <td>643131.077327</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          mean   median    mode         std            var\n",
+       "variavel                                                                  \n",
+       "bill_length_mm       43.921930    44.45    41.1    5.459584      29.807054\n",
+       "bill_depth_mm        17.151170    17.30    17.0    1.974793       3.899808\n",
+       "flipper_length_mm   200.915205   197.00   190.0   14.061714     197.731792\n",
+       "body_mass_g        4201.754386  4050.00  3800.0  801.954536  643131.077327"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "statistics(df_pg, df_pg_dict)"
    ]
   }
  ],
