--- a/notebooks/aula-03/aula-03.ipynb
+++ b/notebooks/aula-03/aula-03.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "6   Qualitativa   Nominal  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,30 +292,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def statistics(data_frame, data_frame_dict):\n",
-    "    quantitative_vars = data_frame_dict.query(\"tipo == 'Quantitativa'\")\n",
-    "    quantitative_vars['variavel']\n",
+    "    quantitative_vars = data_frame_dict.query(\"tipo == 'Quantitativa'\")['variavel']\n",
+    "    quantitative_vars\n",
     "    statistics_columns = np.array(['mean', 'median', 'mode', 'std', 'var'])\n",
     "\n",
     "    statistics_data = np.column_stack([\n",
-    "            data_frame[quantitative_vars['variavel']].mean(),\n",
-    "            data_frame[quantitative_vars['variavel']].median(),\n",
-    "            data_frame[quantitative_vars['variavel']].mode().T,\n",
-    "            data_frame[quantitative_vars['variavel']].std(),\n",
-    "            data_frame[quantitative_vars['variavel']].var()\n",
+    "            data_frame[quantitative_vars].mean(),\n",
+    "            data_frame[quantitative_vars].median(),\n",
+    "            data_frame[quantitative_vars].mode().T,\n",
+    "            data_frame[quantitative_vars].std(),\n",
+    "            data_frame[quantitative_vars].var()\n",
     "        ])\n",
     "\n",
-    "    statistics_list = pd.DataFrame(statistics_data, index=quantitative_vars['variavel'], columns=statistics_columns)\n",
-    "    display(statistics_list)"
+    "    statistics_list = pd.DataFrame(statistics_data, index=quantitative_vars.values, columns=statistics_columns)\n",
+    "    display(statistics_list.T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -338,53 +338,47 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mean</th>\n",
-       "      <th>median</th>\n",
-       "      <th>mode</th>\n",
-       "      <th>std</th>\n",
-       "      <th>var</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>variavel</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>bill_length_mm</th>\n",
+       "      <th>mean</th>\n",
        "      <td>43.921930</td>\n",
-       "      <td>44.45</td>\n",
-       "      <td>41.1</td>\n",
-       "      <td>5.459584</td>\n",
-       "      <td>29.807054</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>bill_depth_mm</th>\n",
        "      <td>17.151170</td>\n",
-       "      <td>17.30</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>1.974793</td>\n",
-       "      <td>3.899808</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>flipper_length_mm</th>\n",
        "      <td>200.915205</td>\n",
-       "      <td>197.00</td>\n",
-       "      <td>190.0</td>\n",
-       "      <td>14.061714</td>\n",
-       "      <td>197.731792</td>\n",
+       "      <td>4201.754386</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>body_mass_g</th>\n",
-       "      <td>4201.754386</td>\n",
-       "      <td>4050.00</td>\n",
-       "      <td>3800.0</td>\n",
+       "      <th>median</th>\n",
+       "      <td>44.450000</td>\n",
+       "      <td>17.300000</td>\n",
+       "      <td>197.000000</td>\n",
+       "      <td>4050.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mode</th>\n",
+       "      <td>41.100000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>190.000000</td>\n",
+       "      <td>3800.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.459584</td>\n",
+       "      <td>1.974793</td>\n",
+       "      <td>14.061714</td>\n",
        "      <td>801.954536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>var</th>\n",
+       "      <td>29.807054</td>\n",
+       "      <td>3.899808</td>\n",
+       "      <td>197.731792</td>\n",
        "      <td>643131.077327</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -392,12 +386,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                          mean   median    mode         std            var\n",
-       "variavel                                                                  \n",
-       "bill_length_mm       43.921930    44.45    41.1    5.459584      29.807054\n",
-       "bill_depth_mm        17.151170    17.30    17.0    1.974793       3.899808\n",
-       "flipper_length_mm   200.915205   197.00   190.0   14.061714     197.731792\n",
-       "body_mass_g        4201.754386  4050.00  3800.0  801.954536  643131.077327"
+       "variavel  bill_length_mm  bill_depth_mm  flipper_length_mm    body_mass_g\n",
+       "mean           43.921930      17.151170         200.915205    4201.754386\n",
+       "median         44.450000      17.300000         197.000000    4050.000000\n",
+       "mode           41.100000      17.000000         190.000000    3800.000000\n",
+       "std             5.459584       1.974793          14.061714     801.954536\n",
+       "var            29.807054       3.899808         197.731792  643131.077327"
       ]
      },
      "metadata": {},
